--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -3,6 +3,6 @@
   --primary-text: #1a1a1a;
   --secondary: #51515187;
   --secondary-text: #ffffff;
-  --accent: #505050;
+  --accent: #313131c4;
   --accent-text: #ffffff;
 }
