--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #030303;
   --primary-text: #1a1a1a;
-  --secondary: #51515187;
+  --secondary: #868686;
   --secondary-text: #ffffff;
   --accent: #313131c4;
   --accent-text: #ffffff;
