--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #030303;
-  --primary-text: #1a1a1a;
+  --primary-text: #bdbdbd;
   --secondary: #868686;
   --secondary-text: #ffffff;
   --accent: #31313178;
